--- a/3ds_nand_validator.cbp
+++ b/3ds_nand_validator.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="3ds_nand_checker" />
+		<Option title="3ds_nand_validator" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/3ds_nand_checker" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/3ds_nand_validator" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/3ds_nand_checker" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/3ds_nand_validator" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,16 +31,6 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="check_size_nand.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="compare_nand.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="include/nand_checker.h" />
-		<Unit filename="log.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -48,6 +38,7 @@
 			<code_completion />
 			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
